# Smart_Audio_Test

IoTControllerSDK/ControllerSDK/IoTControllerSDK/: build.gradle
IoTControllerSDK/ControllerSDK/IoTControllerSDK/src/main/: AndroidManifest.xml
IoTControllerSDK/ControllerSDK/IoTivity/: build.gradle
IoTControllerSDK/ControllerSDK/IoTivity/src/main/: AndroidManifest.xml
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/: .gitignore  CMakeLists.txt
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/extlibs/: CMakeLists.txt
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/include/: iotivity_config.h
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/jni/: CMakeLists.txt
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/resource/csdk/connectivity/: CMakeLists.txt
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/resource/csdk/resource-directory/: CMakeLists.txt
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/resource/csdk/stack/: CMakeLists.txt
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/resource/oc/: CMakeLists.txt
IoTControllerSDK/ControllerSDK/IoTivity/src/main/cpp/resource/octbstack/: CMakeLists.txt
IoTControllerSDK/ControllerSDK/IoTivity/src/main/res/values/: strings.xml
IoTControllerSDK/iotivity/java/: build.gradle
IoTControllerSDK/iotivity/java/examples-java/simpleclient/: MANIFEST.MF
IoTControllerSDK/iotivity/java/examples-java/simpleclientserver/: MANIFEST.MF
IoTControllerSDK/iotivity/java/examples-java/simpleserver/: MANIFEST.MF
IoTControllerSDK/iotivity/java/iotivity-android/: build.gradle
IoTControllerSDK/iotivity/java/iotivity-android/src/main/java/org/iotivity/ca/: CaIpInterface.java
IoTControllerSDK/iotivity/java/iotivity-java/src/main/java/org/iotivity/ca/: CaIpInterface.java
SmartAudio/: build.gradle  gradle.properties  settings.gradle
SmartAudio/app/: build.gradle
SmartAudio/app/src/main/: AndroidManifest.xml
SmartAudio/app/src/main/java/com/qualcomm/qti/smartaudio/: DEBUG.java
SmartAudio/app/src/main/java/com/qualcomm/qti/smartaudio/activity/: AboutActivity.java  BaseActivity.java  BluetoothOnBoardingActivity.java  DeviceSettingsActivity.java  FirmwareUpdateActivity.java  MainActivity.java  MultichannelSetupActivity.java  SettingsActivity.java  SetupActivity.java  StartActivity.java  WifiScanBaseActivity.java
SmartAudio/app/src/main/java/com/qualcomm/qti/smartaudio/adapter/: BluetoothOnBoardingDeviceListAdapter.java  NetworkTreeAdapter.java  NewSpeakerAdapter.java  SettingsAdapter.java  SpeakerAdapter.java  WifiNetworksAdapter.java
SmartAudio/app/src/main/java/com/qualcomm/qti/smartaudio/app/: SmartAudioApplication.java
SmartAudio/app/src/main/java/com/qualcomm/qti/smartaudio/fragment/: AboutFragment.java  AddChannelInstructionFragment.java  AddWifiDialogFragment.java  AdjustAudioCompletedFragment.java  AdjustAudioFragment.java  AdjustAudioInstructionFragment.java  AdjustAudioMoreInfoFragment.java  AudioSettingFragment.java  AvsOnBoardingSetupFragment.java  AvsOnBoardingWebViewFragment.java  BaseFragment.java  (+49 more)
SmartAudio/app/src/main/res/anim/: slide_in_bottom.xml  slide_in_left.xml  slide_in_right.xml  slide_in_top.xml  slide_out_bottom.xml  slide_out_left.xml  slide_out_right.xml  slide_out_top.xml
SmartAudio/app/src/main/res/drawable/: anim_playing.xml  anim_playing_small.xml  anim_progress_indeterminate.xml  anim_progress_indeterminate_album.xml  anim_progress_indeterminate_small.xml  arrow_up_popup.xml  bgd_expandable_group_speaker_list.xml  bgd_list_item.xml  bgd_list_item_normal.xml  bgd_list_item_pressed.xml  bgd_list_item_speaker.xml  bgd_list_item_speaker_expanded.xml  bgd_list_item_speaker_normal.xml  bgd_list_item_speaker_pressed.xml  bgd_list_item_speaker_with_now_playing.xml  bgd_list_item_speaker_with_now_playing_expanded.xml  bgd_list_item_speaker_with_now_playing_normal.xml  bgd_list_item_speaker_with_now_playing_pressed.xml  bgd_manage_zones_popup.xml  bgd_more_options_popup.xml  bgd_overlay.xml  bgd_search_edit_text.xml  bgd_setup_button.xml  bgd_setup_button_normal.xml  bgd_setup_button_pressed.xml  bgd_setup_zones_popup.xml  bgd_setup_zones_popup_normal.xml  bgd_setup_zones_popup_pressed.xml  bgd_speaker_name_text_layout.xml  bottom_sheet_header_background.xml  btn_back.xml  btn_bg_blue.xml  btn_bg_light_gray.xml  btn_bottombar.xml  btn_checkmark.xml  btn_close.xml  btn_close_actionbar.xml  btn_confirm_bg.xml  btn_down.xml  btn_expand.xml  (+38 more)
SmartAudio/app/src/main/res/drawable-xxhdpi/: btn_add.xml
SmartAudio/app/src/main/res/layout/: activity_about.xml  activity_bluetooth_scan.xml  activity_device_settings.xml  activity_firmware_update.xml  activity_main.xml  activity_multichannel_setup.xml  activity_music_services.xml  activity_settings.xml  activity_setup.xml  activity_start.xml  additional_surround_view.xml  app_bar_bluetooth.xml  app_bar_browse.xml  app_bar_default.xml  app_bar_firmware_update.xml  app_bar_main_view.xml  app_bar_music_playing.xml  app_bar_settings.xml  app_bar_text.xml  audio_setting_item.xml  bottom_menu_item.xml  bottom_menu_toggle_item.xml  bottom_navigation_home.xml  bottom_navigation_speaker.xml  content_main.xml  custom_group_name_dialog_view.xml  device_detail_action_item_view.xml  dialog_custom.xml  empty_view.xml  equalizer_setting_item.xml  fragment_about.xml  fragment_avs_on_boarding_setup.xml  fragment_avs_on_boarding_web_view.xml  fragment_browse.xml  fragment_browse_main.xml  fragment_device_details.xml  fragment_group.xml  fragment_group_name_select.xml  fragment_group_speaker.xml  fragment_music.xml  (+64 more)
SmartAudio/app/src/main/res/menu/: bluetooth_connected_paired_device_menu.xml  bluetooth_disconnected_paired_device_menu.xml  main.xml  settings_item_default_menu.xml
SmartAudio/app/src/main/res/values/: arrays.xml  attrs.xml  bools.xml  colors.xml  content_descriptions.xml  dimens.xml  strings.xml  styles.xml
SmartAudio/app/src/main/res/values-sw600dp/: bools.xml  dimens.xml
SmartAudio/app/src/main/res/values-v21/: styles.xml
SmartAudio/app/src/main/res/xml/: network_security_config.xml  settings_item_default_menu.xml
(+183 files in other folders)
